--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# requirements.txt (Cloud Deployment Version)
+# requirements.txt (Final Deployment Version)
 streamlit
 pandas
 xarray
@@ -14,6 +14,9 @@ sentence-transformers
 tiktoken
 plotly
 
-# ChromaDB specific dependencies for cloud deployment
+# ChromaDB specific dependencies
 chromadb==0.4.24
 pysqlite3-binary
+
+# Pinning numpy to a compatible version
+numpy==1.23.5
