--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# requirements.txt (Final Version for Python 3.12+)
+# requirements.txt (Final Version with FAISS)
 streamlit
 pandas
 xarray
@@ -15,5 +15,5 @@ tiktoken
 plotly
 geoalchemy2
 
-# Use a modern version of chromadb compatible with new Python/NumPy
-chromadb>=0.5.0
+# Vector store using FAISS (Facebook AI Similarity Search)
+faiss-cpu
