--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ geoalchemy2
 
 # --- AI & Language Model ---
 langchain
-langchain-google-genai==1.3.1  # Pinned version to fix API error
+langchain-google-genai
 sentence-transformers
 faiss-cpu
 tiktoken
