--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ geoalchemy2
 
 # --- AI & Language Model ---
 langchain
-langchain-google-genai = 0.1.3  # Specific version for compatibility
+langchain-google-genai == 0.1.3  # Specific version for compatibility
 sentence-transformers
 faiss-cpu
 tiktoken
