--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ xarray
 netcdf4
 dask
 pyarrow
+toml
 
 # --- Database & Geospatial ---
 sqlalchemy
@@ -17,8 +18,8 @@ geopandas
 geoalchemy2
 
 # --- AI & Language Model ---
-langchain==0.1.20         # UPGRADED
-langchain-core==0.1.52    # ADDED
+langchain==0.1.20
+langchain-core==0.1.52
 langchain-google-genai==1.0.5
 sentence-transformers
 faiss-cpu
