--- a/requirements.txt
+++ b/requirements.txt
@@ -18,9 +18,9 @@ geopandas
 geoalchemy2
 
 # --- AI & Language Model ---
-langchain==0.2.5
-langchain-core==0.2.5
-langchain-google-genai==1.0.5
+langchain
+langchain-core
+langchain-google-genai
 sentence-transformers
 faiss-cpu
 tiktoken
