--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ pandas
 xarray
 netcdf4
 dask
-pyarrow
+pyarray
 toml
 
 # --- Database & Geospatial ---
@@ -19,7 +19,7 @@ geoalchemy2
 
 # --- AI & Language Model ---
 langchain==0.2.5
-langchain-core==0.2.5
+langchain-core==0.2.7  # CORRECTED: Updated to match langchain's dependency
 langchain-google-genai==1.0.5
 sentence-transformers
 faiss-cpu
