--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,17 @@
 # requirements.txt
-
-# --- Frontend ---
 streamlit
-
-# --- Data Processing ---
 pandas
 xarray
 netcdf4
 dask
 pyarrow
-toml
-
-# --- Database & Geospatial ---
 sqlalchemy
 psycopg2-binary
 geopandas
-geoalchemy2
-
-# --- AI & Language Model ---
-langchain==0.2.5
-langchain-core==0.2.7  # CORRECTED: Updated to match langchain's dependency
-langchain-google-genai==1.0.5
+langchain
+langchain-google-genai
 sentence-transformers
-faiss-cpu
 tiktoken
-
-# --- Visualization ---
 plotly
+geoalchemy2
+faiss-cpu
